@@ -33,6 +33,7 @@ freeipa (4.7.0-1) UNRELEASED; urgency=medium
   * client.install: Add new template.
   * control: Update vcs urls.
   * control: Mark priority as optional.
+  * control, rules: Bump dh to 11.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Wed, 18 Apr 2018 17:50:11 +0300
 
